기타: Dockerfile 수정
* Dockerfile 파라미터 수정
* MongoDB 계정정보 주석 처리