@@ -2,5 +2,5 @@ FROM openjdk:11-jdk-slim
 ENV PORT 8082
 EXPOSE 8082
 
-COPY *.jar app.jar
-CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "app.jar"]
+COPY target/*.jar app.jar
+CMD ["java", "-XX:+UseG1GC", "-jar", "app.jar"]
